@@ -34,6 +34,7 @@ OBJS=	mosquitto.o \
 		misc_mosq.o \
 		mux.o \
 		mux_epoll.o \
+		mux_kqueue.o \
 		mux_poll.o \
 		net.o \
 		net_mosq.o \
@@ -172,6 +173,9 @@ mux.o : mux.c mosquitto_broker_internal.h
 	${CROSS_COMPILE}${CC} $(BROKER_CPPFLAGS) $(BROKER_CFLAGS) -c $< -o $@
 
 mux_epoll.o : mux_epoll.c mosquitto_broker_internal.h
+	${CROSS_COMPILE}${CC} $(BROKER_CPPFLAGS) $(BROKER_CFLAGS) -c $< -o $@
+
+mux_kqueue.o : mux_kqueue.c mosquitto_broker_internal.h
 	${CROSS_COMPILE}${CC} $(BROKER_CPPFLAGS) $(BROKER_CFLAGS) -c $< -o $@
 
 mux_poll.o : mux_poll.c mosquitto_broker_internal.h
