@@ -23,6 +23,8 @@ int mux__init(struct mosquitto__listener_sock *listensock, int listensock_count)
 {
 #ifdef WITH_EPOLL
 	return mux_epoll__init(listensock, listensock_count);
+#elif defined(WITH_KQUEUE)
+	return mux_kqueue__init(listensock, listensock_count);
 #else
 	return mux_poll__init(listensock, listensock_count);
 #endif
@@ -32,6 +34,8 @@ int mux__add_out(struct mosquitto *context)
 {
 #ifdef WITH_EPOLL
 	return mux_epoll__add_out(context);
+#elif defined(WITH_KQUEUE)
+	return mux_kqueue__add_out(context);
 #else
 	return mux_poll__add_out(context);
 #endif
@@ -42,6 +46,8 @@ int mux__remove_out(struct mosquitto *context)
 {
 #ifdef WITH_EPOLL
 	return mux_epoll__remove_out(context);
+#elif defined(WITH_KQUEUE)
+	return mux_kqueue__remove_out(context);
 #else
 	return mux_poll__remove_out(context);
 #endif
@@ -52,6 +58,8 @@ int mux__add_in(struct mosquitto *context)
 {
 #ifdef WITH_EPOLL
 	return mux_epoll__add_in(context);
+#elif defined(WITH_KQUEUE)
+	return mux_kqueue__add_in(context);
 #else
 	return mux_poll__add_in(context);
 #endif
@@ -62,6 +70,8 @@ int mux__delete(struct mosquitto *context)
 {
 #ifdef WITH_EPOLL
 	return mux_epoll__delete(context);
+#elif defined(WITH_KQUEUE)
+	return mux_kqueue__delete(context);
 #else
 	return mux_poll__delete(context);
 #endif
@@ -72,6 +82,8 @@ int mux__handle(struct mosquitto__listener_sock *listensock, int listensock_coun
 {
 #ifdef WITH_EPOLL
 	return mux_epoll__handle(listensock, listensock_count);
+#elif defined(WITH_KQUEUE)
+	return mux_kqueue__handle(listensock, listensock_count);
 #else
 	return mux_poll__handle(listensock, listensock_count);
 #endif
@@ -82,6 +94,8 @@ int mux__cleanup(void)
 {
 #ifdef WITH_EPOLL
 	return mux_epoll__cleanup();
+#elif defined(WITH_KQUEUE)
+	return mux_kqueue__cleanup();
 #else
 	return mux_poll__cleanup();
 #endif
