@@ -29,6 +29,14 @@ int mux_epoll__delete(struct mosquitto *context);
 int mux_epoll__handle(struct mosquitto__listener_sock *listensock, int listensock_count);
 int mux_epoll__cleanup(void);
 
+int mux_kqueue__init(struct mosquitto__listener_sock *listensock, int listensock_count);
+int mux_kqueue__add_out(struct mosquitto *context);
+int mux_kqueue__remove_out(struct mosquitto *context);
+int mux_kqueue__add_in(struct mosquitto *context);
+int mux_kqueue__delete(struct mosquitto *context);
+int mux_kqueue__handle(struct mosquitto__listener_sock *listensock, int listensock_count);
+int mux_kqueue__cleanup(void);
+
 int mux_poll__init(struct mosquitto__listener_sock *listensock, int listensock_count);
 int mux_poll__add_out(struct mosquitto *context);
 int mux_poll__remove_out(struct mosquitto *context);
